--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently \"npm run serve-api\" \"npm run serve\"",
+    "serve": "ng serve --proxy-config proxy.config.json",
+    "serve-api": "nodemon server.js --watch server",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -46,4 +50,7 @@
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
+
+
+
 }
